--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <build>
+  <finalName>maven</finalName>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
